links open up to new page

--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
 			<!--Footer/Contact-->
 			<section id="footer" class="section footer">
 				<div class="center">
-					<a class="link footer__link" href="https://www.linkedin.com/in/khankamolk/">LinkedIn</a>
+					<a class="link footer__link" href="https://www.linkedin.com/in/khankamolk/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
 					<span>•</span>
-					<a class="link footer__link" href="https://github.com/khankamolk">Github</a>
+					<a class="link footer__link" href="https://github.com/khankamolk" target="_blank" rel="noopener noreferrer">Github</a>
 					<span>•</span>
-					<a class="link footer__link" href="mailto:khankamolk@berkeley.edu" target="_blank">khankamolk@berkeley.edu</a>
+					<a class="link footer__link" href="mailto:khankamolk@berkeley.edu" target="_blank" rel="noopener noreferrer">khankamolk@berkeley.edu</a>
 				</div>
 				<div class="center">
 					<p id="copyright">Coded by Khankamol Chor Kongrukgreatiyos 2022</p>
