--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>Khankamol Chor Kongrukgreatiyos</title>
     </head>
 
-    <body class="light" id="top">
+    <body class="light">
 
         <!-- Navigation Bar -->
         <header>
