updated responsiveness for projects

--- a/index.html
+++ b/index.html
@@ -86,18 +86,18 @@
             <!-- Projects -->
             <section id="projects" class="section projects">
                 <h2 class="section__title">Projects</h2>
-                <div class="projects__grid">
-                    <div class="project">
-                        <h3 class="project__header">Ants vs. Some Bees</h3> 
+                <div class="projects__container center">
+                    <div class="project__item">
+                        <h3 class="project__header">Build Your Own World</h3> 
                         <p class="project__description">
-                            A spin off of Popcap’s game Plants vs. Zombies. 
-                            Implemented using an object-oriented programming paradigm.
+                            An exploration game featuring an interactive 
+                            2D tile-based random world generation engine with a GUI and HUD.
                         </p>
                         <ul class="project__skills">
-                            <li class="project__skills-item">Python</li>
+                            <li class="project__skills-item">Java</li>
                         </ul>       
                     </div>     
-                    <div class="project">
+                    <div class="project__item">
                         <h3 class="project__header">Scheme Interpretor</h3> 
                         <p class="project__description">
                             Developed an interpreter for a subset of the Scheme language 
@@ -107,7 +107,7 @@
                             <li class="project__skills-item">Python</li>
                         </ul>       
                     </div>  
-                    <div class="project">
+                    <div class="project__item">
                         <h3 class="project__header">Movie classifier</h3> 
                         <p class="project__description">
                             Built a classification model to predict the genre 
@@ -118,7 +118,7 @@
                             <li class="project__skills-item">Pandas</li>
                         </ul>       
                     </div>  
-                    <div class="project">
+                    <div class="project__item">
                         <h3 class="project__header">Doubled Ended Queue</h3> 
                         <p class="project__description">
                             Built the two implementations of a “Double Ended Queue”: 
